  as const. The mc() method now also takes also a GTime object as argument.

GModelTemporal
GModelTemporalConst
  The eval_gradients() method is no longer declared as const.

GModels
  The set() method has been added for model setting.

GNodeArray
  The node array class now derives from GContainer, and all usual container
  methods have been implemented.

GObservations
  The observation is now passed as const reference in the append()
  method (was non-const before). The observation iterator has been
  removed from the class. The reference returned by the models() method
  is now declared const. The operator[] now return a pointer instead
  of a reference and the set() method has been added for observation
  setting.

GOptimizerFunction
  The value method now returns a value instead of a pointer.

GOptimizer & GOptimizerLM
  The optimization operators have been removed and replaced by the
  optimize method.

GPars
  The GPars class now derives from GContainer and implements the
  usual at(), size(), isempty(), append(), insert(), remove(),
  reserve() and extent() methods. The haspar() method has been
  renamed to contains() for consistency.

GPhoton
  Add mcid argument to Photon constructor (defaults to -1).

GSkymap
  Rename xy2dir() to pix2dir(), dir2xy() to dir2pix(), xy2pix() to
  pix2inx() and pix2xy() to inx2pix(). The nmaps argument in the
  sky map constructor is now passed by reference. The isinmap()
  method has been renamed to contains(). The read() and write()
  methods now take a reference instead of a pointer.

GSkyPixel
  The class now supports 1D and 2D pixels. Type conversion methods
  have been added that allow assigning integer and double precision
  values from and to GSkyPixel for 1D pixels. A size() method has
  been added that returns the pixel dimension. Also the is1D() and
  is2D() methods can be used to determine whether a pixel is 1D
  or 2D. index() methods have been added to set and get 1D pixel