@@ -100,7 +100,7 @@ void TestGOptimizer::test_optimizer(const int& mode)
         ran.seed(i);
 
         // Allocate events pointer
-        GEvents *events;
+        GEvents* events;
 
         // Create either a event list or an event cube
         if (mode == UN_BINNED) {
@@ -115,7 +115,7 @@ void TestGOptimizer::test_optimizer(const int& mode)
         ob.id(gammalib::str(i));
 
         // Add events to the observation
-        ob.events(events);
+        ob.events(*events);
         ob.ontime(tmax.secs()-tmin.secs());
         obs.append(ob);
 
